@@ -16,8 +16,6 @@
 
 	<properties>
 		<java.version>13</java.version>
-		<maven.compiler.target>13</maven.compiler.target>
-    	<maven.compiler.source>13</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -97,25 +95,17 @@
 			  	<version>3.8.1</version>
 			  	<configuration>
 			  		<useIncrementalCompilation>false</useIncrementalCompilation>
-			    	<release>13</release>
-			    	<compilerArgs>--enable-preview</compilerArgs>
 			  	</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-surefire-plugin</artifactId>
 			  	<version>2.22.2</version>
-			  	<configuration>
-			    	<argLine>--enable-preview</argLine>
-			  	</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-failsafe-plugin</artifactId>
 			  	<version>2.22.2</version>
-			  	<configuration>
-			    	<argLine>--enable-preview</argLine>
-			  	</configuration>
 			</plugin>
 			<plugin>
 		        <!-- Build an executable JAR -->
@@ -123,7 +113,6 @@
 		        <artifactId>maven-jar-plugin</artifactId>
 		        <version>3.1.2</version>
 		        <configuration>
-		        	<argLine>--enable-preview</argLine>
 		        	<archive>
 		            	<manifest>
 		              		<addClasspath>true</addClasspath>
